// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListActions /> spec List actions renders component when disabled 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
    style="margin-right: 16px;"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft"
      id="actionsPopover"
    >
      <div
        class="euiPopover__anchor"
      >
        <button
          class="euiButton euiButton--primary euiButton--iconRight"
          data-test-subj="listActionsButton"
          disabled=""
          type="button"
        >
          <span
            class="euiButton__content"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiIcon-isLoading euiButton__icon"
              focusable="false"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
            <span
              class="euiButton__text"
            >
              Actions
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ListActions /> spec List actions renders component when enabled 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
    style="margin-right: 16px;"
  >
    <div
      class="euiPopover euiPopover--anchorDownLeft"
      id="actionsPopover"
    >
      <div
        class="euiPopover__anchor"
      >
        <button
          class="euiButton euiButton--primary euiButton--iconRight"
          data-test-subj="listActionsButton"
          type="button"
        >
          <span
            class="euiButton__content"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiIcon-isLoading euiButton__icon"
              focusable="false"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
            <span
              class="euiButton__text"
            >
              Actions
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
